--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -12,7 +12,7 @@ footer
           .p(style='color:#fff !important;margin-top:26px !important;font-size:130% !important;')
           | Questions? 
           | Contact: 
-          a(style='font-size:105%;color:#105fd8 !important;')(href='mailto:hi@find-me.co') hi@find-me.co
+          a(style='font-size:105%;color:#105fd8 !important;')(href='mailto:hi@find-me.co') hi@storyrake.com
           hr(style='height:1px; visibility:hidden;margin-top:0px;margin-bottom:0px')
           //a(href='/terms')   Terms 
           //| | 
