--- a/views/home.pug
+++ b/views/home.pug
@@ -258,13 +258,15 @@ block content
           h3(style="font-weight:500 !important;color:#4f4c52 !important;padding-top:20px !important;") Join Storyrake
           
           form.form-horizontal(id='signup-form', action='/signup', method='POST')
-            p.paragraph(style='font-size:22px;line-height:1.5;color:#341f97;padding-top:5px;text-align:center;') 
+            p.paragraph(style='font-size:23px;line-height:1.5;color:#341f97;padding-top:5px;text-align:center;') 
               | Enter your email address and favorite subreddits,
               br
               | receive a summary email with the top posts
             input(type='hidden', name='_csrf', value=_csrf)
             p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;padding-top:5px;') 
-              | Select your favorite subreddits  
+              | Select your favorite subreddits
+              br
+              | (you can always edit these later)  
             <select multiple="multiple" class="js-example-basic-single" name="subreddits" id="subreddits" style="width:265px;font-size:16px;" >
             <option value='funny'>funny</option>
             <option value='todayilearned'>todayilearned</option>
@@ -361,7 +363,7 @@ block content
 
             p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;') 
               <br>
-              | Select your delivery frequency  
+              | How often do you want a summary?
             <select name="frequency" id="frequency" style="width:265px;font-size:16px;padding-top:10px;padding-bottom:10px;height:43px;border-radius:4px !important;line-height:1.7 !important;box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;border: 1px solid #ccc !important;padding-left:5px;font-family: Avenir !important;" >
             <option value="Daily">Daily</option>
             <option value="Weekly">Weekly</option>
