landing page updates

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -9734,7 +9734,7 @@ input[type="checkbox"] {
   max-width: 85% !important; }
 
 p.paragraph span {
-  color: #21ce99 !important;
+  color: #f39853 !important;
   font-weight: bold; }
 
 .home__subline span {
@@ -9839,7 +9839,7 @@ h1, h2, h3, h4, h5, h6,
   color: #fff !important;
   background-color: #fff !important;
   font-weight: bold !important;
-    border: 2px solid #f99854 !important; }
+  border: 2px solid #f99854 !important; }
 
 #login.btn {
   width: 30% !important;
