updated email format

--- a/views/home.pug
+++ b/views/home.pug
@@ -412,7 +412,7 @@ block content
           br
           br
           span ✔ 
-          | You'll receive a personilized Reddit summary in your inbox
+          | You'll receive a personalized Reddit summary in your inbox
           br
           
           br
