adding a few subreddits

--- a/views/home.pug
+++ b/views/home.pug
@@ -181,7 +181,13 @@ block content
                 <option value='python'>python</option>                  
                 <option value='financialindependence'>financialindependence</option>
                 <option value='SideProject'>SideProject</option>
-                <option value='Entrepreneur'>Entrepreneur</option>               
+                <option value='Entrepreneur'>Entrepreneur</option> 
+                <option value='hockey'>Hockey</option> 
+                <option value='natureisfuckinglit'>Natureisfuckinglit</option> 
+                <option value='startups'>Startups</option>
+                <option value='quityourbullshit'>Quityourbullshit</option>
+                <option value='startups'>Startups</option>
+                <option value='whatsthisbug'>Whatsthisbug</option>               
                 </select>
 
 
@@ -358,7 +364,12 @@ block content
             <option value='financialindependence'>financialindependence</option>
             <option value='SideProject'>SideProject</option>
             <option value='Entrepreneur'>Entrepreneur</option>
-
+            <option value='hockey'>Hockey</option> 
+            <option value='natureisfuckinglit'>Natureisfuckinglit</option> 
+            <option value='startups'>Startups</option>
+            <option value='quityourbullshit'>Quityourbullshit</option>
+            <option value='startups'>Startups</option>
+            <option value='whatsthisbug'>Whatsthisbug</option> 
             </select>
 
             p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;') 
