--- a/views/home.pug
+++ b/views/home.pug
@@ -180,14 +180,19 @@ block content
                 <option value='nfl'>nfl</option>   
                 <option value='python'>python</option>                  
                 <option value='financialindependence'>financialindependence</option>
-                <option value='SideProject'>SideProject</option>
-                <option value='Entrepreneur'>Entrepreneur</option> 
+                <option value='sideProject'>SideProject</option>
+                <option value='entrepreneur'>Entrepreneur</option> 
                 <option value='hockey'>Hockey</option> 
                 <option value='natureisfuckinglit'>Natureisfuckinglit</option> 
                 <option value='startups'>Startups</option>
                 <option value='quityourbullshit'>Quityourbullshit</option>
                 <option value='startups'>Startups</option>
-                <option value='whatsthisbug'>Whatsthisbug</option>               
+                <option value='whatsthisbug'>Whatsthisbug</option>     
+                <option value='dfsports'>Dfsports</option> 
+                <option value='AMA'>AMA</option> 
+                <option value='shamelessplug'>Shamelessplug</option> 
+                <option value='indiebiz'>Indiebiz</option> 
+                <option value='internetisbeautiful'>Internetisbeautiful</option>           
                 </select>
 
 
@@ -200,7 +205,7 @@ block content
                 <select name="frequency" id="frequency" style="width:265px;font-size:16px;padding-top:10px;padding-bottom:10px;height:43px;border-radius:4px !important;line-height:1.7 !important;box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;border: 1px solid #ccc !important;padding-left:5px;font-family: Avenir !important;" >
                 <option value="Daily">Daily</option>
                 <option value="Weekly">Weekly</option>
-                <option value="Weekly">None (unsubscribe from emails)</option>
+                <option value="None">None (unsubscribe from emails)</option>
                 </select>
 
    
@@ -370,6 +375,11 @@ block content
             <option value='quityourbullshit'>Quityourbullshit</option>
             <option value='startups'>Startups</option>
             <option value='whatsthisbug'>Whatsthisbug</option> 
+            <option value='dfsports'>Dfsports</option> 
+            <option value='AMA'>AMA</option> 
+            <option value='shamelessplug'>Shamelessplug</option> 
+            <option value='indiebiz'>Indiebiz</option> 
+            <option value='internetisbeautiful'>Internetisbeautiful</option> 
             </select>
 
             p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;') 
