--- a/views/home.pug
+++ b/views/home.pug
@@ -116,7 +116,6 @@ block content
                 <option value='sports'>sports</option>
                 <option value='gadgets'>gadgets</option>
                 <option value='tifu'>tifu</option>
-                <option value='InternetIsBeautiful'>InternetIsBeautiful</option>
                 <option value='nottheonion'>nottheonion</option>
                 <option value='photoshopbattles'>photoshopbattles</option>
                 <option value='food'>food</option>
@@ -193,6 +192,7 @@ block content
                 <option value='shamelessplug'>Shamelessplug</option> 
                 <option value='indiebiz'>Indiebiz</option> 
                 <option value='internetisbeautiful'>Internetisbeautiful</option>           
+                <option value='webdev'>webdev</option>           
                 </select>
 
 
@@ -303,7 +303,6 @@ block content
             <option value='sports'>sports</option>
             <option value='gadgets'>gadgets</option>
             <option value='tifu'>tifu</option>
-            <option value='InternetIsBeautiful'>InternetIsBeautiful</option>
             <option value='nottheonion'>nottheonion</option>
             <option value='photoshopbattles'>photoshopbattles</option>
             <option value='food'>food</option>
@@ -373,13 +372,13 @@ block content
             <option value='natureisfuckinglit'>Natureisfuckinglit</option> 
             <option value='startups'>Startups</option>
             <option value='quityourbullshit'>Quityourbullshit</option>
-            <option value='startups'>Startups</option>
             <option value='whatsthisbug'>Whatsthisbug</option> 
             <option value='dfsports'>Dfsports</option> 
             <option value='AMA'>AMA</option> 
             <option value='shamelessplug'>Shamelessplug</option> 
             <option value='indiebiz'>Indiebiz</option> 
             <option value='internetisbeautiful'>Internetisbeautiful</option> 
+            <option value='webdev'>webdev</option>        
             </select>
 
             p.paragraph(style='font-size:22px;line-height:1.5;color:#4f4c52;') 
