top domains skeleton

--- a/views/domains.pug
+++ b/views/domains.pug
@@ -176,9 +176,9 @@ block content
                   { responsivePriority: 3, targets: 2 },
                   { responsivePriority: 2, targets: 4 },
               ],
-              //default sort by # of submissions desc order
-              "order": [[ 1, "desc" ]],
-              "pageLength": 30
+              //default sort by # of total upvotes desc order
+              "order": [[ 5, "desc" ]],
+              "pageLength": 15
 
 
           } );
