top domains skeleton

--- a/views/domains.pug
+++ b/views/domains.pug
@@ -273,6 +273,7 @@ block content
         tr.append("<td>" + Math.round(domains_json_value1.domain[i].median_score)+"</td>");
         tr.append("<td>" + Math.round(domains_json_value1.domain[i].total_upvotes)+"</td>");
         tr.append("<td>" + domains_json_value1.domain[i].classify+"</td>");
+        tr.append("<td>" + domains_json_value1.domain[i].period+"</td>");
 
         //tr.append("<td>" + x_date_stg+"</td>");
         //tr.append("<td>"+"<btn class=\"btn-md btn-hover btn-default\" onclick=\"deleteRow2(this)\">Delete</button>"+"</td>");
