top domains skeleton

--- a/views/domains.pug
+++ b/views/domains.pug
@@ -181,7 +181,7 @@ block content
                   { responsivePriority: 1, targets: 0 },
                   { responsivePriority: 3, targets: 2 },
                   { responsivePriority: 2, targets: 4 },
-                  
+
                   //hide the subreddit and period columns, since they'll be loaded in above
                   {
                       "targets": [ 1 ],
@@ -282,9 +282,9 @@ block content
         tr.append("<td>" + domains_json_value1.domain[i].domain+"</td>");
         tr.append("<td>" + domains_json_value1.domain[i].subreddit+"</td>");
         tr.append("<td>" + domains_json_value1.domain[i].submissions+"</td>");
-        tr.append("<td>" + Math.round(domains_json_value1.domain[i].avg_score)+"</td>");
-        tr.append("<td>" + Math.round(domains_json_value1.domain[i].median_score)+"</td>");
-        tr.append("<td>" + Math.round(domains_json_value1.domain[i].total_upvotes)+"</td>");
+        tr.append("<td>" + Math.round(Math.round(domains_json_value1.domain[i].avg_score)/1000*10)/10+"k"+"</td>");
+        tr.append("<td>" + Math.round(Math.round(domains_json_value1.domain[i].median_score)/1000*10)/10+"k"+"</td>");
+        tr.append("<td>" + Math.round(Math.round(domains_json_value1.domain[i].total_upvotes)/1000*10)/10+"k"+"</td>");
         tr.append("<td>" + domains_json_value1.domain[i].classify+"</td>");
         tr.append("<td>" + domains_json_value1.domain[i].period+"</td>");
 
