--- a/views/domains.pug
+++ b/views/domains.pug
@@ -284,7 +284,8 @@ block content
         tr.append("<td>" + domains_json_value1.domain[i].submissions+"</td>");
         tr.append("<td>" + Math.round(Math.round(domains_json_value1.domain[i].avg_score)/1000*10)/10+"k"+"</td>");
         tr.append("<td>" + Math.round(Math.round(domains_json_value1.domain[i].median_score)/1000*10)/10+"k"+"</td>");
-        tr.append("<td>" + Math.round(Math.round(domains_json_value1.domain[i].total_upvotes)/1000*10)/10+"k"+"</td>");
+        tr.append("<td>" + domains_json_value1.domain[i].avg_score*Math.log(domains_json_value1.domain[i].submissions)+"</td>");
+        //Math.round(Math.round(domains_json_value1.domain[i].total_upvotes)/1000*10)/10+"k"+"</td>");
         tr.append("<td>" + domains_json_value1.domain[i].classify+"</td>");
         tr.append("<td>" + domains_json_value1.domain[i].period+"</td>");
 
