--- a/views/domains.pug
+++ b/views/domains.pug
@@ -272,6 +272,14 @@ block content
       //console.log(domains_json_value1.domain[1].domain)
       console.log(domains_json_value1.domain[1].domain)
       k = domains_json_value1.domain.length
+
+
+        function commaSeparateNumber(val){
+          while (/(\d+)(\d{3})/.test(val.toString())){
+            val = val.toString().replace(/(\d+)(\d{3})/, '$1'+','+'$2');
+          }
+          return val;
+        };
       //$.parseJSON(domains_json,
       //function (domains_json_value1) {
       //var tr;
@@ -284,7 +292,7 @@ block content
         tr.append("<td>" + domains_json_value1.domain[i].submissions+"</td>");
         tr.append("<td>" + Math.round(Math.round(domains_json_value1.domain[i].avg_score)/1000*10)/10+"k"+"</td>");
         tr.append("<td>" + Math.round(Math.round(domains_json_value1.domain[i].median_score)/1000*10)/10+"k"+"</td>");
-        tr.append("<td>" + Math.round(Math.round(domains_json_value1.domain[i].avg_score*Math.log(domains_json_value1.domain[i].submissions))/1000*10)/10+"k"+"</td>");
+        tr.append("<td>" + commaSeparateNumber(Math.round(domains_json_value1.domain[i].avg_score*domains_json_value1.domain[i].submissions))+"</td>");
         //Math.round(Math.round(domains_json_value1.domain[i].total_upvotes)/1000*10)/10+"k"+"</td>");
         tr.append("<td>" + domains_json_value1.domain[i].classify+"</td>");
         tr.append("<td>" + domains_json_value1.domain[i].period+"</td>");
