--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -9507,7 +9507,7 @@ body {
 .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
   color: white !important;
   border: none !important;
-  background: rgba(33, 243, 158, 0.17) !important; }
+  background: rgba(33, 243, 158, 0.10) !important; }
 
 #blurb.container {
   background-color: #fff !important;
@@ -9572,7 +9572,7 @@ img {
   margin: 0 auto; }
 
 table.dataTable.hover tbody tr:hover, table.dataTable.display tbody tr:hover {
-  background-color: rgba(117, 247, 151, 0.18) !important; }
+  background-color: rgba(249, 152, 84, 0.19) !important; }
 
 table.dataTable {
   padding-top: 12px !important;
@@ -9620,7 +9620,32 @@ select#yadcf-filter--example-2.yadcf-filter {
   max-width: 120px !important; }
 
 select#yadcf-filter--myTableData2-1.yadcf-filter {
-  background-color: white !important; }
+  background-color: white !important;
+  width: 265px !important; 
+  font-size: 16px !important; 
+  padding-top: 10px !important; 
+  padding-bottom: 10px !important; 
+  height: 43px !important; 
+  border-radius: 4px !important; 
+  line-height: 1.7 !important; 
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important; 
+  border: 1px solid #ccc !important; 
+  padding-left: 5px !important; 
+  font-family: Avenir !important; }
+
+select#yadcf-filter--myTableData2-7.yadcf-filter {
+  background-color: white !important;
+  width: 265px !important; 
+  font-size: 16px !important; 
+  padding-top: 10px !important; 
+  padding-bottom: 10px !important; 
+  height: 43px !important; 
+  border-radius: 4px !important; 
+  line-height: 1.7 !important; 
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important; 
+  border: 1px solid #ccc !important; 
+  padding-left: 5px !important; 
+  font-family: Avenir !important; }
 
 div.dataTables_filter input:focus {
   background-color: rgba(224, 255, 245, 0.52) !important;
