--- a/views/domains.pug
+++ b/views/domains.pug
@@ -48,7 +48,7 @@ block content
   .container(style="text-align:center;")
     .col-md-6.col-md-offset-3
       
-      h3 Reddit domain leaderboard
+      h3(style="font-weight:500 !important;color:#4f4c52 !important;padding-top:15px !important;") Reddit domain leaderboard
       p.paragraph(style='font-size:18px;line-height:1.7;text-align:center') 
         | This ranks domains that are submitted as links to Reddit.
         br
@@ -56,8 +56,7 @@ block content
         //.br
         //br
         //.p(style='font-size:110%') If you're a content creator who
-      br
-      br
+      
     
     br
   .row
