top domains skeleton

--- a/views/domains.pug
+++ b/views/domains.pug
@@ -62,7 +62,8 @@ block content
   .row
     .container
       //#domains.h4 Filters
-      
+      br
+      br
       .col-md-6.col-md-offset-3(style="text-align:center;")
         .p(style="font-size:20px;font-weight:bold;line-height:1.2;color:#341f97;padding-top:2px;text-align:center;") Subreddit:
         br
@@ -123,7 +124,9 @@ block content
       tbody
   .container(style='text-align:center;width:60%')
     br
-    .p(style='font-size:120%;font-weight:bold') Enter your email to get a weekly summary of the top domains on Reddit
+    br
+    br
+    .p(style='font-size:120%;font-weight:bold') [Storyrake CTA]
     // Begin MailChimp Signup Form
     link(href='//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css', rel='stylesheet', type='text/css')
     style(type='text/css').
